# deskflow

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  IDEAS.md  INDEX.md  LinkedIn.md  README.md  os-config.example.json  package-lock.json  package.json  requirements.txt
.claude/: settings.json
.claude/skills/start-day/: SKILL.md
scripts/: download_sounds.py  log_action.py  record_stats.py  retrolog.py  setup.py  start_day.py  tag-tasks.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: calendar.rs  clickup.rs  config.rs  lib.rs  main.rs  notepad.rs  projects.rs  spotify.rs  terminal.rs  vault.rs
src/lib/services/: calendar.ts  clickup.ts  notepad.ts  projects.ts  vault.ts
src/lib/stores/: ambience.ts  config.ts  refresh.ts  theme.ts
src/lib/widgets/: Ambience.svelte  AmbientPanel.svelte  Calendar.svelte  CloudBackground.svelte  ForestBackground.svelte  Notepad.svelte  NowNext.svelte  Projects.svelte  QuickCaptureModal.svelte  SpaceBackground.svelte  TaskStats.svelte  TodayTasks.svelte  Vault.svelte
src/routes/: +layout.svelte  +page.svelte
